crates/fxrank-lang-rust/tests/snapshots/snapshots__logging_soup_and_one_io.snap
---
source: crates/fxrank-lang-rust/tests/snapshots.rs
expression: summary
---
{
  "logging_soup": {
    "async_boundary": false,
    "await_count": 0,
    "confidence": 0.9,
    "effects": [
      {
        "class": 2,
        "discounted_to": null,
        "hidden": false,
        "kind": "logging",
        "tier": "path"
      },
      {
        "class": 2,
        "discounted_to": null,
        "hidden": false,
        "kind": "logging",
        "tier": "path"
      },
      {
        "class": 2,
        "discounted_to": null,
        "hidden": false,
        "kind": "logging",
        "tier": "exact"
      },
      {
        "class": 2,
        "discounted_to": null,
        "hidden": false,
        "kind": "logging",
        "tier": "exact"
      }
    ],
    "max_class": 2,
    "own_score": 5.0,
    "risk_features": [],
    "risk_weight": 0,
    "symbol": "logging_soup"
  },
  "one_io": {
    "async_boundary": false,
    "await_count": 0,
    "confidence": 0.6,
    "effects": [
      {
        "class": 4,
        "discounted_to": null,
        "hidden": false,
        "kind": "panic",
        "tier": "heuristic"
      },
      {
        "class": 7,
        "discounted_to": null,
        "hidden": false,
        "kind": "net.fs.db",
        "tier": "path"
      }
    ],
    "max_class": 7,
    "own_score": 23.5,
    "risk_features": [],
    "risk_weight": 0,
    "symbol": "one_io"
  }
}
